# esp-idf-mpu-9250

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  mpu9250.c  mpu9250.h  mpu9250_tests.c  mpu9250_tests.h
examples/mpu9250_example/: CMakeLists.txt  sdkconfig  sdkconfig.esp32  sdkconfig.old
examples/mpu9250_example/main/: idf_component.yml  main.c
include/: driver_mpu9250.c  driver_mpu9250.h  driver_mpu9250_code.h
interface/: driver_mpu9250_interface.c  driver_mpu9250_interface.h
